log
sá., 14 de may. de 2022 22:11:48: 
 sudoku.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  0|5
total_score: 0/70
e909da3
sá., 14 de may. de 2022 22:13:03: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:71:19: error: assignment to expression with array type
       adj_n->sudo = n->sudo;
                   ^
Compilation failed
6dd5780
sá., 14 de may. de 2022 22:14:03: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
8983490
sá., 14 de may. de 2022 22:15:41: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
34431ac
sá., 14 de may. de 2022 22:16:50: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
515c4f7
sá., 14 de may. de 2022 22:17:16: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
1133e11
sá., 14 de may. de 2022 22:19:10: 
 sudoku.c | 15 ++++++---------
 1 file changed, 6 insertions(+), 9 deletions(-)
 tests:  2|4
total_score: 15/70
4f03bcb
sá., 14 de may. de 2022 22:21:14: 
 sudoku.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
7ba7530
sá., 14 de may. de 2022 22:22:11: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:75:5: error: statement with no effect [-Werror=unused-value]
     for (f ; f <= 8 ; f++)
     ^~~
sudoku.c:77:7: error: statement with no effect [-Werror=unused-value]
       for (k ; k <= 8 ; k++)
       ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
29bcfe3
sá., 14 de may. de 2022 22:22:45: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
fec5400
sá., 14 de may. de 2022 22:24:11: 
 sudoku.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 5/70
51e7af5
sá., 14 de may. de 2022 22:26:31: 
 sudoku.c | 33 ++-------------------------------
 1 file changed, 2 insertions(+), 31 deletions(-)
 tests:  2|4
total_score: 15/70
a5930ee
sá., 14 de may. de 2022 22:28:10: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
4aa47d2
sá., 14 de may. de 2022 22:28:35: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
19f58e4
sá., 14 de may. de 2022 22:29:09: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
db05002
sá., 14 de may. de 2022 22:29:37: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:75:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
e8e141c
sá., 14 de may. de 2022 22:33:06: 
 sudoku.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
d213e24
sá., 14 de may. de 2022 22:49:25: 
 sudoku.c | 39 +++++++++++++++++++++++++++++++++++++++
 1 file changed, 39 insertions(+)
 tests:  2|4
total_score: 15/70
bd86fb7
sá., 14 de may. de 2022 22:50:40: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
f2995f3
sá., 14 de may. de 2022 22:51:50: 
 sudoku.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)
 tests:  5|3
total_score: 35/70
70396d0
sá., 14 de may. de 2022 22:53:10: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
5bf85ef
sá., 14 de may. de 2022 23:00:44: 
 sudoku.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  0|5
total_score: 0/70
f73f27a
sá., 14 de may. de 2022 23:03:22: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
373922f
sá., 14 de may. de 2022 23:15:06: 
 sudoku.c | 20 +++++++++++++++-----
 1 file changed, 15 insertions(+), 5 deletions(-)
 tests:  7|1
total_score: 55/70
f1692a3
sá., 14 de may. de 2022 23:49:39: 
 sudoku.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
 tests:  0|0
f9eac13
sá., 14 de may. de 2022 23:52:03: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
39d789b
sá., 14 de may. de 2022 23:54:56: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7006132
sá., 14 de may. de 2022 23:55:48: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
5413aca
sá., 14 de may. de 2022 23:59:28: 
 sudoku.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  0|0
812c6ee
do., 15 de may. de 2022  0:01:31: 
 sudoku.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|0
ba55e73
do., 15 de may. de 2022  0:01:53: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
c3a945f
do., 15 de may. de 2022  0:02:46: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
675bc8e
do., 15 de may. de 2022  0:03:19: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
ffd54b2
